# daslab

./: .editorconfig  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
board/: README.md  ROUTING.md
config/: .env.example  alert_thresholds.yaml  data_classification.yaml  features.yaml  loop.yaml  memory_governance.yaml  risk_taxonomy.yaml  t7_rubric.yaml
design/: .mcp.json  AGENTS.md  CLAUDE.md  visual-principles.md
docs/: 01-OVERVIEW.md  02-ORG.md  03-PROJECTS.md  04-OPERATIONS.md  05-SCRIPTS.md  06-CLAUDE-CODE-MODE.md  07-CONTEXT-PACK.md  AGENT-ROSTER.md  ARCHITECTURE.md  EXAMPLE-RUN.md  README.md  USAGE.md  USER-GUIDE.md
engineering/: AGENTS.md  CLAUDE.md
experiments/: GATE6-TEMPLATE.yaml  README.md
governance/: .mcp.json  AGENTS.md  CLAUDE.md  charter.md
marketing/: AGENTS.md  CLAUDE.md  brand-guide.md  content-calendar-july-2026.md  content-calendar-june-2026.md
metrics/: registry.yaml
migrations/: README.md  env.py
operations/: AGENTS.md  CLAUDE.md  compliance-gaps.md  monthly-burn-report.md  support-process.md  support-sla-proposal.md  vendor-saas-inventory.md
org/: schema.daslab.yaml
product/: AGENTS.md  CLAUDE.md  roadmap.md
scripts/: .cache_prefix_baseline  README.md  _org_generated.py  _paths.py  adaptive_taxonomy.py  alerting.py  approval_digest.py  board_lint.py  (+55 more)
(+189 files in other folders)
